# control-sys-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: rust.yml
examples/: controllability.rs  step_response.rs
src/: analysis.rs  control.rs  lib.rs  main.rs  model.rs  simulator.rs  trajectory.rs
src/control/: analysis.rs  controller.rs  model.rs  simulator.rs  trajectory.rs
