[package]
name = "control-sys"
version = "0.1.0"
authors = ["Romain Desarzens <rdsrz@pm.me>"]
description = "A Control System library implemented in Rust to design and analyze control systems."
repository = "https://github.com/rdesarz/control-sys-rs"
readme = "README.md"
categories = ["science", "mathematics", "wasm"]
keywords = ["control-theory", "control-systems", "state-space-model"]
license = "MIT"
edition = "2021"

include = [
    "/README.md",
    "/src/",
    "/examples/",
]

[dependencies]
plotters = "0.3.3"
nalgebra = "0.33.2"

[[examples]]
name = "step_response"
path = "examples/step_response.rs"

[[examples]]
name = "controllability"
path = "examples/controllability.rs"